	* CORE: Fixed problem with queryForMatching() and queryForFieldValues() if no fields.  Thanks to JC.  Fixes bug #3301253.
	* CORE: Fixed problem with configuring fields in base class without annotations.  Thanks to JC and Rahan.  Fixed bug #3301698.
	* CORE: Fixed problem with LazyForeignCollection.toArray(T[]).  Thanks to Skylar.  Fixes bug #3302924.
	* CORE: Major revamping of the DataType enumeration.  Added the ability to register external persisters.  Thanks to Craig Andrews.
	* CORE: Removed auto-downcasing of hand wired table name in DatabaseTableConfig.  Thanks to Tomas.  Fixes bug #3302976.
	* CORE: Added the maxEagerForeignCollectionLevel field to the @ForeignCollectionField annotation to limit recursion.
	* CORE: Renamed the maxForeignLevel field in @DatabaseField to be maxForeignAutoRefreshLevel to make more sense.
	* CORE: Added the concept of closeLastIterator() to the DAO and CloseableWrappedIterable for reentrant usage.
	* CORE: Added better connection/statement testing code and fixed some additional missing closes.
	* JDBC: Tweaked the HSQLdb database type to acknowledge that it seems to support inner transactions.

4.21: 5/5/2011 (svn r1721)
	* CORE: Added maxForeignLevel=1 type of setting to @DatabaseField to limit the foreign field recursive calls.
	* CORE: Added a isOpen() to the ConnectionSource interface and implementations.
	* CORE: Fixed a problem with the foreign auto-refresh loops and the last level.  Thanks to Xavier.  Fixes bug #3296400.
	* JDBC: Fixed a _very_ bad, embarrassing problem with unclosed statements.  Thanks to MathieuLoutre.  Fixes bug #3298098.
	* ANDROID: Added better logging and protection around use of the open-helper and AndroidConnectionSource after close.

4.20: 4/30/2011 (svn r1686)
	* CORE: Refactored a couple of places to try and improve DAO creation with foreign fields.  Thanks to the user list.
	* CORE: Improved the dao caching when creating/dropping tables.  Thanks to the user list.